--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,39 @@
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
 }
+
+nav{
+    display: flex;
+    justify-content: space-between;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+    cursor: pointer;
+}
+
+nav>ul{
+    font-style: Medium;
+    font-size: 16px;
+    font-weight: 500;
+    display: flex;
+    gap: 40px;
+    align-items: center;
+}
+
+li{
+    list-style: none;
+}
+
+.btn{
+    color:  rgba(255, 255, 255, 1);
+    background-color:rgba(70, 145, 101, 1);
+    border: 0;
+    border-radius: 4px;
+    padding: 16px 12px;
+    font-style: Semi Bold;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+}
