--- a/styles.css
+++ b/styles.css
@@ -111,3 +111,64 @@ li{
     justify-content: center;
     gap: 20px;
 }
+
+main{
+    margin: 0 100px;
+}
+
+#notes{
+    text-align: center;
+    background-color: #6273820d;
+    margin: 0 -100px;
+    padding: 50px 100px 0;
+}
+
+#notes>h1{
+    color: rgba(0, 25, 49, 1);
+    font-style: Bold;
+    font-size: 48px;
+    font-weight: 700;
+}
+
+#notes>p{
+    color: rgba(98, 115, 130, 1);
+    font-style: Regular;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+#noteBoxes{
+    display: flex;
+    gap: 10px;
+    margin-top: 50px;
+}
+
+.noteBox{
+    background-color: white;
+    padding: 24px;
+    border-radius: 8px;
+    
+}
+
+.noteBox>img{
+    
+    background-color: rgba(249, 85, 85, 1);
+    padding: 8px;
+    border-radius: 100%;
+    margin-top: 20px;
+}
+
+.noteBox>h2{
+    font-style: Semi Bold;
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.noteBox>p{
+    padding: 0 10px;
+    margin: auto;
+    color: rgba(98, 115, 130, 1);
+    font-style: Regular;
+    font-size: 16px;
+    font-weight: 400;
+}
