--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,11 @@ li{
     gap: 10px;
 }
 
+.btn:hover{
+    background-color: rgba(249, 85, 85, 1);
+    color: white;
+}
+
 .btn2{
     background-color: rgba(255, 255, 255, 0);
     color: white;
@@ -57,6 +62,12 @@ li{
     display: flex;
     align-items: center;
     gap: 10px;
+}
+
+.btn2:hover{
+        background-color: rgba(249, 85, 85, 1);
+        color: white;
+        border: 1px solid rgba(249, 85, 85, 1);
 }
 
 #banner{
